# agent-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent_company/: config.py
agent_company/agents/: __init__.py  architect.py  base.py  coder.py  custom.py  devops.py  docs.py  idea.py  perf.py  qa.py  reviewer.py  security.py
agent_company/api/: auth.py  routes.py  server.py
agent_company/cli/: app.py  display.py
agent_company/core/: message_bus.py  models.py  protocols.py  storage.py  thread.py
agent_company/llm/: base.py  claude_provider.py  factory.py  gemini_provider.py  github_provider.py  openai_provider.py
agent_company/memory/: project_memory.py
agent_company/orchestration/: judge.py  moderator.py  planner.py  state_machine.py
agent_company/tools/: artifact_store.py  base.py  executor.py  exporter.py  linter.py  test_runner.py
agent_company/workflow/: base.py  debate.py  pair_programming.py  pipeline.py  red_blue_team.py  spec_first.py  tdd_loop.py
examples/: demo_discussion.py
prompts/: architect.md  coder.md  devops.md  docs.md  idea.md  judge.md  moderator.md  perf.md  planner.md  qa.md  reviewer.md  security.md
tests/: test_api_integration.py  test_memory_enhanced.py  test_message_bus.py  test_models.py  test_new_agents.py  test_orchestration.py  test_pipeline_integration.py  test_protocols.py  test_sse_stream.py  test_storage.py  test_workflow_integration.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
(+16 files in other folders)
